# mtopt

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  LICENSE.md  NOTICE.md  README.md  generate_docs.sh  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bugreport.yml  config.yml  newfeature.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  lint.yml  tests.yml
docs/source/: conf.py  index.rst  modules.rst  tq_mtopt.rst
docs/source/api/: modules.rst  mtopt.rst  tq_mtopt.rst
examples/benchmarking/: benchmark.py  functions.py  helpers.py  plotting.py
mtopt/: grid.py  maxvol.py  network.py  optimization.py  plot.py  qtt.py  tensor.py
mtopt/examples/: grid.ipynb
mtopt/examples/benchmarking/: benchmark.py  functions.py  helpers.py  plot.py  run_comparison.sh  runner.py
paper/: paper.bib  paper.md
tests/: test_grid.py  test_maxvol.py  test_network.py  test_optimization.py  test_qtt.py  test_tensor.py
tq_mtopt/: grid.py  optimization.py  plot.py  qtt.py  tensor.py
tq_mtopt/examples/: grid.ipynb
tq_mtopt/examples/benchmarking/: benchmark.py  functions.py  helpers.py  plot.py  runner.py  threshold_logger.py
