[project]
name = "mtopt"
version = "0.1.0"
description = "Tensor rank cross and matrix train optimizers."
authors = [
    { name = "Roman Ellerbrock", email = "re@terraquantum.swiss" },
    { name = "Aleksandr Berezutskii", email = "albe@terraquantum.swiss" },
]
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
